WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
264547
[WebGPU] webgpu:api,operation,reflection:* does not pass
https://bugs.webkit.org/show_bug.cgi?id=264547
Summary
[WebGPU] webgpu:api,operation,reflection:* does not pass
Mike Wyrzykowski
Reported
2023-11-09 21:15:07 PST
[WebGPU] webgpu:api,operation,reflection:* does not pass
Attachments
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2023-11-09 21:15:55 PST
<
rdar://problem/118216777
>
Mike Wyrzykowski
Comment 2
2023-11-09 21:51:59 PST
Pull request:
https://github.com/WebKit/WebKit/pull/20287
EWS
Comment 3
2023-11-10 19:24:46 PST
Committed
270577@main
(3dbba0e01464): <
https://commits.webkit.org/270577@main
> Reviewed commits have been landed. Closing PR #20287 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug