[WebGPU] webgpu:api,operation,reflection:* does not pass https://bugs.webkit.org/show_bug.cgi?id=264547 <radar://118216777>

Reviewed by Tadeu Zagallo.

Fix a validation error in texture and query set creation and
update the GPUQuerySet idl to the most recent version.

* Source/WebCore/Modules/WebGPU/GPUDevice.cpp:
(WebCore::GPUDevice::createQuerySet):
* Source/WebCore/Modules/WebGPU/GPUQuerySet.cpp:
(WebCore::GPUQuerySet::GPUQuerySet):
(WebCore::GPUQuerySet::type const):
(WebCore::GPUQuerySet::count const):
* Source/WebCore/Modules/WebGPU/GPUQuerySet.h:
(WebCore::GPUQuerySet::create):
(WebCore::GPUQuerySet::GPUQuerySet): Deleted.
* Source/WebGPU/WebGPU/QuerySet.mm:
(WebGPU::Device::createQuerySet):
* Source/WebGPU/WebGPU/Texture.mm:
(WebGPU::Device::validateCreateTexture):
* Source/WebCore/Modules/WebGPU/GPUQuerySet.idl:

Canonical link: https://commits.webkit.org/270577@main